--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(phonetic_search_a)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(phonetic_search_a main.cpp PhoneticFinder.hpp PhoneticFinder.cpp Test.cpp Demo.cpp TestCounter.cpp TestExample.cpp main.cpp PhoneticFinder.hpp PhoneticFinder.cpp Test.cpp)
+add_executable(phonetic_search_a PhoneticFinder.hpp PhoneticFinder.cpp Test.cpp Demo.cpp TestCounter.cpp TestExample.cpp PhoneticFinder.hpp PhoneticFinder.cpp Test.cpp)
